style.css
h1{
    text-align: center;
    font-weight: 1000;
}
#containerAll{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    background-color: rgb(223, 223, 223);
    width: 515px;
    height: 629px;
    margin-left: auto;
    margin-right: auto;
    border: 2px solid rgb(119, 119, 119);
    border-radius: 5px;
}
#displayContainer{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    background-color: lightblue;
    width: 461px;
    height: 150px;
    margin: 20px;
    margin-bottom: 0px;
    padding: 5px;
    border: 2px solid black;
    border-radius: 5px; 
    word-wrap: break-word;
}
#topDisplay{
    text-align: end;
    font-size: 30px; 
    width: 461px;
    overflow: auto;
}
#display{
    text-align: end;
    font-size: 60px;
    width: 461px;
    min-height: 69px;
    white-space: nowrap; 
    overflow: hidden;
}
#container1{
    display: flex;
    flex-direction: row;
    gap: 5px;
}
#inputs{
    display: flex;
    flex-direction: column;
    gap: 5px;
    margin: 20px;
}
#row0.row{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.column{
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.row{
    display: flex;
    flex-direction: row;
    gap: 5px;
}
.operation{
    background-color: rgb(181, 178, 228);
}
#clear{
    background-color: rgb(226, 176, 176);
    font-size: xx-large;
    font-weight: 500;
}
.num{
    background-color: rgb(250, 234, 215);
}
#equals{
    background-color: rgb(170, 221, 204);
}
#backspace{
    background-color: rgb(249, 250, 215);
}
.defaultFormat{
    font-size: xx-large;
    font-weight: 500;
}
.defaultSquare{
    width: 75px;
    height: 75px;
    border: 2px solid black;
    border-radius: 5px;
}
.defaultRectangle{
    width: 235px;
    height: 75px;
    border: 2px solid black;
    border-radius: 5px;
}
.defaultSquareOperation{
    width: 115px;
    height: 115px; 
    border: 2px solid black;
    border-radius: 5px;
}
#equals{
    width: 315px;
    height: 75px;
    border: 2px solid black;
    border-radius: 5px;
}

